# fastapi_testing

./: .gitignore  pyproject.toml
app/: main.py
app/api/: api.py
app/core/: config.py  database.py  logger.py  schemas.py
app/db/: database.py
app/domains/infrastructure/: _model_ordering.py  _router_ordering.py  _schemas_ordering.py  models.py  router.py  schemas.py  services.py
app/middleware/: logging.py
app/models/: infrastructure.py
app/routers/: ordering.py
app/services/: ordering_crud.py
app/utils/: formatter.py
docs/: help_queries.sql  info.txt
src/: main.py  pydantic_test.py
tests/: main.py
