[project]
name = "p2-fastapi-test"
version = "0.1.0"
description = "FastAPI testing template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "black>=25.11.0",
    "fastapi>=0.121.2",
    "isort>=7.0.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
    "yarl>=1.22.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 200
use_parentheses = true
ensure_newline_before_comments = true
remove_redundant_aliases = true
combine_as_imports = true
combine_star = true
skip_glob = [
    "*/__init__.py",
    "**/__pycache__/*",
    ".venv/*",
    ".git/*",
]
skip = [
    ".gitignore",
    ".dockerignore",
    ".env",
    ".venv",
    "venv",
    "env",
    "__init__.py",
]
extend_skip = [".md", ".json", ".txt",]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
default_section = "THIRDPARTY"

[tool.black]
line-length = 200
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
    | .*/__init__.py
)/
'''
